--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "littledb",
+  "name": "badbankfirehydrant",
   "version": "1.0.0",
   "description": "lowdb sample for 1.125",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "author": "abel@mit.edu",
+  "author": "Chetan Gulati",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "lowdb": "^1.0.0"
+    "lowdb": "^1.0.0",
+    "nodemon": "^1.18.9"
   }
 }
